# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-reporting-python-sdk"
version = "0.0.1"
description = "Connect to ACTE Technology data reporting API"
readme = "README.md"
authors = [{ name = "ACTE Technology", email = "support@acte.ltd" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["iot", "connector", "report"]
dependencies = [
    "requests",
]
requires-python = ">=3.9"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://gitlab.acte.solutions/adrien/data-reporting-python-sdk"

# [project.scripts]
# realpython = "reader.__main__:main"
